2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix build failure when oint_type_shift has an unusual value.
	* lispbibl.d (mtypecode): Define a fallback when no optimized definition
	is possible.

2017-11-01  Bruno Haible  <bruno@clisp.org>

	Fix small problem in 2017-10-28 change.
	* lispbibl.d (oint_addr_mask): Make sure evaluation in preprocessor
	directives produces the right value.

2017-10-31  Bruno Haible  <bruno@clisp.org>

	Apply TRIVIALMAP's memory allocation also to the STACK area.
	* lispbibl.d (TRIVIALMAP_MEMORY_STACK): New macro. When it is defined,
	don't check oint_addr_mask against MALLOC_ADDRESS_RANGE.
	* spvw.d (init_memory) [TRIVIALMAP_MEMORY_STACK]: Allocate the stack
	range in [MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END],
	rather than through mymalloc.

2017-10-30  Bruno Haible  <bruno@clisp.org>

	Add early detection of a problem that would lead to crashes later.
	Seen on Linux/sparc64.
	* spvw.d (bits_used_by_range): New function.
	(init_memory): Verify that the range used for STACK is adequate.

2017-10-30  Bruno Haible  <bruno@clisp.org>

	Fix socket operations on native Windows (regression from 2011-07-19).
	Since we use the gnulib wrappers for socket operations, we must test
	errno, not WSAGetLastError().
	* win32aux.d (lowlevel_fd_read, fd_read, fd_write): Fix documentation.
	(do_sock_read): Use errno, not WSAGetLastError().
	(sock_read): Set errno, not WSAGetLastError().
	(do_sock_write): Use errno, not WSAGetLastError().
	(sock_write): Set errno, not WSAGetLastError().
	* stream.d (fd_error_eof_p): Renamed from error_eof_p. Don't test
	against WSAESHUTDOWN.
	(low_read_array_unbuffered_handle, low_fill_buffered_handle): Update.
	(CHECK_INTERRUPT): Test errno, not WSAGetLastError().
	(sock_error_eof_p): New function.
	(low_read_unbuffered_socket, low_listen_unbuffered_socket,
	low_read_array_unbuffered_socket, low_fill_buffered_socket): Invoke
	sock_error_eof_p instead of error_eof_p.
